<resources>
    <string name="web_client_id">831741184989-jmalele806k63drjto7ti5tfd9auraob.apps.googleusercontent.com</string>

    <!-- Main Activity -->
    <string name="app_name">Sanitizor</string>
    <string name="Register">Register</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="sanitizor_logo">Sanitizor_logo</string>

    <!-- Settings Dialogue -->
    <string name="settings_label">Settings</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="clear_local_leaderboard">Clear Local Leaderboard</string>
    <string name="brightness">Brightness</string>
    <string name="enable_push_notifications">Enable Push Notifications</string>
    <string name="disable_push_notifications">Disable Push Notifications</string>
    <string name="gyro_controls">Gyro Controls</string>
    <string name="swipe_controls">Swipe Controls</string>
    <string name="joystick_controls">Joystick Controls</string>
    <string name="control_scheme">Control Scheme</string>
    <string name="preference_file_key">qwertyuiopasdfghjklzxcvbnm</string>

    <!-- Game Activity -->
    <string name="fire_button">Fire!</string>
    <string name="level_cleared_message">LEVEL CLEARED!!%sNext Level Starting in %d seconds…</string>
    <string name="livestxt">Lives: %d</string>
    <!-- Leaderboard Activity -->
    <string name="header">LEADERBOARD</string>
    <string name="name_label">Name:</string>
    <string name="score_label">Score:</string>
    <string name="highscore_header">YOUR HIGHSCORE</string>
    <string name="highscore">0</string>
    <string name="home_button">HOME</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score</string>
    <string name="home">Home</string>
    <string name="play_again">Play Again!</string>
    <string name="submit">Submit Score</string>
    <string name="level_start_message">Level Starting…</string>
    <string name="sign_in_notice">Your score will not be submitted to the leaderboard because you are not signed in</string>
    <string name="high_score_sign_in">You must sign in to view your high score</string>
    <string name="score_display">Score: %s</string>
    <string name="die">Die</string>

</resources>