<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/sanitizor_logo"
        app:srcCompat="@drawable/sanitizorlogo"
        tools:srcCompat="@drawable/sanitizorlogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="?buttonHeight"
        android:layout_marginHorizontal="?buttonHorMargin"
        android:layout_marginVertical="?buttonVerMargin"
        android:text="@string/play"
        android:textColor="?buttonTextColor"
        android:textSize="35sp"
        android:background="?buttonBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_settings"
        android:onClick="playButton"/>

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="?buttonHeight"
        android:layout_marginHorizontal="?buttonHorMargin"
        android:layout_marginVertical="?buttonVerMargin"
        android:text="@string/settings"
        android:textColor="?buttonTextColor"
        android:textSize="?buttonTextSize"
        android:background="?buttonBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_leaderboard"
        android:onClick="settingsButtonListener"/>

    <Button
        android:id="@+id/button_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="?buttonHeight"
        android:layout_marginHorizontal="?buttonHorMargin"
        android:layout_marginVertical="?buttonVerMargin"
        android:text="@string/view_leaderboard"
        android:textColor="?buttonTextColor"
        android:textSize="?buttonTextSize"
        android:background="?buttonBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_signin"
        android:onClick="viewLeaderboard" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="?buttonHeight"
        android:layout_marginHorizontal="?buttonHorMargin"
        android:layout_marginVertical="?buttonVerMargin"
        android:text="@string/log_in"
        android:textColor="?buttonTextColor"
        android:textSize="?buttonTextSize"
        android:background="?buttonBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="signIn"/>

    <Button
        android:id="@+id/button_signout"
        android:layout_width="match_parent"
        android:layout_height="?buttonHeight"
        android:layout_marginHorizontal="?buttonHorMargin"
        android:layout_marginVertical="?buttonVerMargin"
        android:text="@string/log_out"
        android:textColor="?buttonTextColor"
        android:textSize="?buttonTextSize"
        android:background="?buttonBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="signOut" />

</androidx.constraintlayout.widget.ConstraintLayout>
