<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="390dp"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/sanitizor_logo"
                app:srcCompat="@drawable/sanitizorlogo"
                tools:srcCompat="@drawable/sanitizorlogo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="159dp">

            <Button
                android:id="@+id/Button_play1"
                android:layout_width="10dp"
                android:layout_height="75dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="125dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_frame_lg"
                android:text="@string/play"
                android:textColor="@color/buttonTextColor"
                android:onClick="playButton"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="106dp">

            <Button
                android:id="@+id/button_settings"
                android:layout_width="10dp"
                android:layout_height="75dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_frame_med"
                android:onClick="settingsButtonListener"
                android:text="@string/settings"
                android:textColor="@color/buttonTextColor"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_Leaderboard"
                android:layout_width="295dp"
                android:layout_height="75dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_frame_med"
                android:text="@string/view_leaderboard"
                android:textColor="@color/buttonTextColor"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="40dp"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_Login"
                    android:layout_width="160dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_frame_sm"
                    android:text="@string/log_in"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_Register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_Register"
                    android:layout_width="160dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center|end|top"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="27dp"
                    android:background="@drawable/button_frame_sm"
                    android:text="@string/Register"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.377"
                    app:layout_constraintStart_toEndOf="@+id/button_Login"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
